Відтепер рандомні слова пропонуємо з вже оброблених
