# src/generated/openapi/api/openapi.yaml
@@ -380,6 +380,28 @@ paths:
       tags:
       - dictionary-controller
       x-accepts: '*/*'
+  /api/dict/findWordToSuggest/{level}:
+    get:
+      operationId: findWordToSuggest
+      parameters:
+      - explode: false
+        in: path
+        name: level
+        required: true
+        schema:
+          format: int32
+          type: integer
+        style: simple
+      responses:
+        "200":
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/WordDto'
+          description: OK
+      tags:
+      - dictionary-controller
+      x-accepts: '*/*'
   /api/dict/enrichWithAiTranslations:
     get:
       operationId: enrichWithAiTranslations
